--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -9,7 +9,7 @@
   <script src="lib/chai/chai.js"></script>
   <script src="lib/sinon/sinon.js"></script>
   <script>
-    mocha.setup('bdd');
+    mocha.setup({ui: 'bdd'});
     window.expect = chai.expect;
     $(function() {
       window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
